Prevent dates wrapping

--- a/src/styles/_events.scss
+++ b/src/styles/_events.scss
@@ -28,6 +28,10 @@
     }
     &__dateStart {
         display: inline-block;
+        white-space: nowrap;
+    }
+    &__dateEnd {
+        white-space: nowrap;
     }
     &__description {
         order: 4;
